    moqui-orientdb component, see its README.md for usage
  - Apache Camel along with the CamelServiceRunner and MoquiServiceEndpoint
    are now in the moqui-camel component which has a MoquiConf.xml file so
    no additional configuration is needed
  - JBoss KIE and Drools are now in tool component moqui-kie, an optional
    component for mantle-usl; has MoquiConf to add ToolFactory
- ExecutionContext and ExecutionContextFactory
  - Removed initComponent() and destroyComponent() methods; were never well
    supported (runtime component init and destroy caused issues)
  - Removed getCamelContext() from ExecutionContextFactory and
    ExecutionContext, use getTool("Camel", CamelContext.class)
  - Removed getElasticSearchClient() from ExecutionContextFactory and
    ExecutionContext, use getTool("ElasticSearch", Client.class)
  - Removed getKieContainer, getKieSession, and getStatelessKieSession
    methods from ExecutionContextFactory and ExecutionContext, use
    getTool("KIE", KieToolFactory.class) and use the corresponding
    methods there
  - See new feature notes under Tool Factory
- Caching
  - Ehcache has been removed
  - The org.moqui.context.Cache interface is replaced by javax.cache.Cache
  - Configuration options for caches changed (moqui-conf.cache-list.cache)
- Async Services
  - Now uses more standard java.util.concurrent interfaces
  - Removed ServiceCallAsync.maxRetry() - was never supported
  - Removed ServiceCallAsync.persist() - was never supported well, used to
    simply call through Quartz Scheduler when set
  - Removed persist option from XML Actions service-call.@async attribute
  - Async services never called through Quartz Scheduler (only scheduled)
  - ServiceCallAsync.callWaiter() replaced by callFuture()
  - Removed ServiceCallAsync.resultReceiver()
  - Removed ServiceResultReceiver interface - use callFuture() instead
  - Removed ServiceResultWaiter class - use callFuture() instead
  - See related new features below